--- a/session3/package.json
+++ b/session3/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@types/jest": "24.0.19",
     "@types/node": "12.11.2",
-    "@types/react": "^16.9.9",
+    "@types/react": "^16.9.11",
     "@types/react-currency-formatter": "^1.1.2",
     "@types/react-dom": "16.9.2",
+    "@types/yup": "^0.26.24",
     "bulma": "^0.8.0",
-    "react": "^16.10.2",
+    "formik": "^1.5.8",
+    "react": "^16.11.0",
     "react-currency-formatter": "^1.1.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
