--- a/PizzaApp/package.json
+++ b/PizzaApp/package.json
@@ -10,7 +10,9 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/redux-thunk": "^2.1.0",
+    "@types/yup": "^0.26.26",
     "bulma": "^0.8.0",
+    "formik": "^2.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
@@ -20,7 +22,8 @@
     "redux-create-reducer": "^2.0.0",
     "redux-localstorage-simple": "^2.1.6",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
